--- a/citation.bib
+++ b/citation.bib
@@ -1,6 +1,6 @@
 @article{hisup,
   author = {Xu, Bowen and Xu, Jiakun and Xue, Nan and Xia, Gui-Song},
   title = {Accurate Polygonal Mapping of Buildings in Satellite Imagery},
-  journal = {arXiv:2208.00609},
+  journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
   year = {2022},
 }
