--- a/citation.bib
+++ b/citation.bib
@@ -1,6 +1,10 @@
-@article{hisup,
-  author = {Xu, Bowen and Xu, Jiakun and Xue, Nan and Xia, Gui-Song},
-  title = {Accurate Polygonal Mapping of Buildings in Satellite Imagery},
-  journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
-  year = {2023},
+@article{XU2023284,
+    author = {Bowen Xu and Jiakun Xu and Nan Xue and Gui-Song Xia},
+    title = {HiSup: Accurate polygonal mapping of buildings in satellite imagery with hierarchical supervision},
+    journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
+    volume = {198},
+    pages = {284-296},
+    year = {2023},
+    issn = {0924-2716},
+    doi = {https://doi.org/10.1016/j.isprsjprs.2023.03.006},
 }
